[package]
name = "rusty-shift"
version = "0.1.0"
authors = ["Brendan Leber <n0bml@brendanleber.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "rusty-shift"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
